FIX: Many Many Fixes... I need to commit more

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
         "Autolathe",
-        "Circuitboard"
+        "breq",
+        "brgt",
+        "brlt",
+        "Circuitboard",
+        "horz"
     ]
 }
